店舗登録の変更画面の作成
